<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Habilidades</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spinner_title">Situacion</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="salir">Salir</string>
    <string name="menu">Menú</string>
    <string name="guardar">Guardar</string>
    <string name="datos">Datos del Usuario</string>
    <string name="menuguia1">Submenu Guia 1</string>
    <string name="menuguia3">Submenu Guia 3</string>
    <string name="menuguia5">Submenu Guia 5</string>
    <string name="menuguia6">Submenu Guia 6</string>
    <string name="menuguia7">Submenu Guia 7</string>
    <string name="menuguia8">Submenu Guia 8</string>
    <string name="menuguia9">Submenu Guia 9</string>
    <string name="menuguia10">Submenu Guia 10</string>
    <string name="menuguia11">Submenu Guia 11</string>

    <string name="back">Anterior</string>
    <string name="next">Siguiente</string>
    <string name="test">Autoevaluación</string>

    <string name="respuesta_1_4">Para calcular este valor, solo multiplicas el 15% por 20 en su exppresión decimal; o sea, recorriendo el punto dos lugares a la derecha: \n\n (0.15)(20)=3</string>
    <string name="respuesta_2_2">Para calcular este valor, solo multiplicas el 200% por 6 en us expresión decimal; o sea, recorriendo el punto dos lugares a la derecha: \n\n (2)(6)=12</string>
    <string name="respuesta_3_2">Para calcular este porcentaje, solo divide el total de hombres entre 500 y obtendras la expresión del porcentaje en decimal, para expresar en porcentaje, recorre el punto 2 casillas a la izquierda (multiplica por 100).</string>
    <string name="respuesta_4_4">Para encontra este valor se multiplican los $32,000 por 12% (en decimal). El valor obtenido representa la ganancia que obtuviste. Para obtener la cantidad en loa que lo compraste basta con restar esta cantidad a los $32,000. \n 32,000 x .12 = 3840 \n 32,000 &#8211; 3,840 = 28,160</string>
    <string name="respuesta_5_4">En este caso tenemos una razón, esto es, una fracción que nos representa: \n \n 25%/100% = &#188;</string>
    <string name="respuesta_6_4">En este caso es más fácil resslver por regla de 3: /n Si 60 votos = 100% \n ¿? = 40% \n \n (60)(40)/100 = 24</string>
    <string name="respuesta_7_1">En este caso también tenemos una razón, esto es, uina fracción que nos representa: \n \n 20%/100% = 1/5</string>
    <string name="respuesta_8_3">En este caso también se resuelve por regla de 3: /n Si 60 votos = 100% /n ¿? = 15% \n \n (60)(15)/100 = 9</string>
    <string name="respuesta_9_3">En este caso también se resuleve por regla de 3: /n Si 60 votos = 100% /n ¿? = 25% \n \n (60)(25)/100 = 15</string>
    <string name="respuesta_10_4">Si lo que se pregunta es por la desocupación, es fácil verificar en el histograma que la columna más alta corresponde a Alemania.</string>
    <string name="respuesta_11_2">En primera instancia, es fácil encontrar que lo que se te pregunta es lo inverso a lo que la gráfica expresa o representa: lo contrario de la desocupación es la ocupación. En consecuencia, Japón no existe entra las opciones, por lo que debes buscar el siguiente valor más cercano a 4, que es el correpondiente a los Estados Unidos</string>
    <string name="respuesta_12_1">De nuevo con Japón. Su valor en la gráfica es 4. Debes multiplicar dicho valor por 2.75 (equivalente a 2 &#190;) con lo que obtines el resultado de 11, es decir, el expresado para Alemania.</string>
    <string name="respuesta_13_3">Sigamos haciendo multiplicaciones para encontrar los valores de estos resultados, multiplica cada uno de ellos, el más alto será el de Canadá pues es igual a 15.25. \n \n (2.5)(6.1) = 15.25</string>
    <string name="respuesta_14_2">Se obtiene mediante la suma de todos los valores y su posterior división entre el número de valores.</string>

    <string name="intentalo_de_nuevo">Inténtalo de nuevo</string>
    
    <string name="funciones">Funciones</string>
    <string name="referencias">Celdas y rangos</string>
    <string name="filtros">Filtros de datos</string>
    <string name="graficos">Gráficos</string>
    <string name="actividad">Actividad</string>

</resources>